crates/path-cli/tests/snapshots/render_md_snapshots__render_md_step_01_minimal.snap
---
source: crates/path-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-01-minimal.json\")"
---
# step-001

**Actor:** `human:alex`
**Timestamp:** 2026-01-29T10:00:00Z

## Changes

- `src/main.rs` (+1 -1)
