crates/path-cli/tests/snapshots/render_md_snapshots__render_md_step_03_formatter.snap
---
source: crates/path-cli/tests/render_md_snapshots.rs
expression: "render_md(\"step-03-formatter.json\")"
---
# step-003

**Actor:** `tool:rustfmt/1.7.0`
**Timestamp:** 2026-01-29T10:05:30Z
**Parents:** `step-002`

> Automatic code formatting

## Changes

- `src/auth/validator.rs` (+8 -3)
